--- a/src/components/UpdateAlert/UpdateAlert.scss
+++ b/src/components/UpdateAlert/UpdateAlert.scss
@@ -1,6 +1,4 @@
-import styled from 'styled-components'
-
-export const Wrapper = styled.div`
+.alert {
   z-index: 2;
   position: sticky;
   top: 0;
@@ -14,7 +12,7 @@ export const Wrapper = styled.div`
   user-select: none;
   animation: showUpdateAlert 0.5s linear;
 
-  :hover {
+  &:hover {
     color: #787878;
   }
 
@@ -24,4 +22,4 @@ export const Wrapper = styled.div`
       padding: 0;
     }
   }
-`
+}
