--- a/src/components/List/List.scss
+++ b/src/components/List/List.scss
@@ -1,5 +1,55 @@
 @import 'variables';
 
+.wrapper {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-height: 350px;
+  margin: 10px 0;
+  border: 1px solid var(--secondary-color);
+  border-radius: 4px;
+  background-color: var(--primary-color);
+  animation: showNote 0.25s;
+
+  @keyframes showNote {
+    from {
+      opacity: 0;
+    }
+  }
+
+  @media ($viewport-4) {
+    width: 400px;
+    margin: 20px;
+  }
+}
+
+.disabled {
+  opacity: 0.5;
+  pointer-events: none;
+}
+
+.pinIcon {
+  position: absolute;
+  top: 2.5px;
+  right: 3px;
+  width: 14px;
+  height: 14px;
+  color: var(--placeholder-color);
+  cursor: pointer;
+  animation: showPin 0.25s;
+
+  @keyframes showPin {
+    from {
+      opacity: 0;
+    }
+  }
+}
+
+.pinned {
+  color: inherit;
+}
+
 .title {
   margin: 8px 24px 0;
   padding: 0;
@@ -55,8 +105,18 @@
 
 .checkIcon {
   width: 20px;
-  margin-top: 10px;
   cursor: pointer;
+}
+
+.value {
+  display: block;
+  width: 85%;
+  margin: 10px;
+  border: none;
+  border-bottom: 1px solid var(--secondary-color);
+  outline: none;
+  color: inherit;
+  background-color: inherit;
 }
 
 .confirmMessage {
@@ -71,4 +131,31 @@
   text-align: center;
   font-size: 14px;
   color: rgb(160, 160, 160);
+}
+
+.save {
+  z-index: 1;
+  margin: 0 auto;
+  padding: 3.75px 20px;
+  border: none;
+  border-radius: 4px 4px 0 0;
+  box-sizing: border-box;
+  outline: none;
+  font-family: inherit;
+  text-align: center;
+  color: inherit;
+  background-color: var(--secondary-color);
+  font-size: 12px;
+  font-weight: 500;
+  cursor: pointer;
+
+  @media ($not-mobile) {
+    :hover {
+      opacity: 0.75;
+    }
+  }
+}
+
+.hidden {
+  visibility: hidden;
 }
