--- a/src/components/File/File.scss
+++ b/src/components/File/File.scss
@@ -1,5 +1,34 @@
 @import 'variables';
 
+.wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 40px;
+  margin: 10px 0;
+  border: 1px solid var(--secondary-color);
+  border-radius: 4px;
+  background-color: var(--primary-color);
+  animation: showFile 0.25s;
+
+  @keyframes showFile {
+    from {
+      opacity: 0;
+    }
+  }
+
+  @media ($viewport-4) {
+    width: 400px;
+    margin: 20px;
+  }
+}
+
+.disabled {
+  opacity: 0.5;
+  pointer-events: none;
+}
+
 .name {
   flex-grow: 1;
   margin: 0 10px;
@@ -65,6 +94,34 @@
       opacity: 0.5;
     }
   }
+}
+
+.downloadIcon {
+  width: 15px;
+  margin-right: 10px;
+  text-align: center;
+  cursor: pointer;
+
+  @media ($not-mobile) {
+    &:hover {
+      opacity: 0.5;
+    }
+  }
+
+  @keyframes loading {
+    from {
+      opacity: 1;
+    }
+    to {
+      opacity: 0.25;
+    }
+  }
+}
+
+.downloading {
+  cursor: default;
+  pointer-events: none;
+  animation: loading 0.75s infinite alternate;
 }
 
 .deleteIcon {
