--- a/src/components/Auth/Auth.scss
+++ b/src/components/Auth/Auth.scss
@@ -78,6 +78,11 @@
   }
 }
 
+.description {
+  margin-bottom: 40px;
+  text-align: center;
+}
+
 .submit {
   margin-top: 30px;
   padding: 6px 8px;
