--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -41,3 +41,29 @@ select {
   appearance: none;
   padding: 0 30px 0 7.5px;
 }
+
+:global {
+  .d-none {
+    display: none;
+  }
+
+  .d-flex {
+    display: flex;
+  }
+
+  .align-items-center {
+    align-items: center;
+  }
+
+  .flex-grow-1 {
+    flex-grow: 1;
+  }
+
+  .text-align-center {
+    text-align: center;
+  }
+
+  .red {
+    color: red;
+  }
+}
