--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -1,4 +1,34 @@
+@import 'styles/variables';
+
 .heading {
   position: absolute;
   left: -9999px;
+}
+
+.enter {
+  position: absolute;
+  left: 100%;
+  transition: left 0.2s;
+}
+
+.enterActive {
+  left: 0;
+}
+
+.exit {
+  position: absolute;
+  left: 0;
+  transition: left 0.2s;
+}
+
+.exitActive {
+  left: -100%;
+}
+
+.page {
+  width: 100vw;
+
+  @media ($viewport-9) {
+    width: auto;
+  }
 }
