--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -6,29 +6,18 @@
 }
 
 .enter {
-  position: absolute;
-  left: 100%;
-  transition: left 0.2s;
+  transform: translateX(100%);
+  transition: transform 0.2s;
 }
 
 .enterActive {
-  left: 0;
+  transform: translateX(0);
 }
 
 .exit {
-  position: absolute;
-  left: 0;
-  transition: left 0.2s;
+  transition: transform 0.2s;
 }
 
 .exitActive {
-  left: -100%;
-}
-
-.page {
-  width: 100vw;
-
-  @media ($viewport-9) {
-    width: auto;
-  }
+  transform: translateX(-100%);
 }
