Prevent route swapping unexpected behaviour

--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -1,15 +1,5 @@
 @import 'styles/variables';
 
-.wrapper {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-
-  @media ($viewport-9) {
-    width: auto;
-  }
-}
-
 .left {
   .enter {
     transform: translateX(100%);
@@ -46,5 +36,15 @@
 
   .exitActive {
     transform: translateX(100%);
+  }
+}
+
+.page {
+  position: absolute;
+  width: 100vw;
+  min-height: calc(100vh - 60px);
+
+  @media ($viewport-9) {
+    width: auto;
   }
 }
