--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -56,8 +56,8 @@ select {
     align-items: center;
   }
 
-  .flex-grow-1 {
-    flex-grow: 1;
+  .flex-1 {
+    flex: 1;
   }
 
   .text-align-center {
