--- a/src/components/Note/Note.scss
+++ b/src/components/Note/Note.scss
@@ -5,7 +5,6 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-height: 250px;
   margin: 10px 0;
   border: 1px solid var(--secondary-color);
   border-radius: 4px;
@@ -23,6 +22,7 @@
 }
 
 .pinIcon {
+  z-index: 1;
   position: absolute;
   top: 2.5px;
   right: 3px;
@@ -34,6 +34,15 @@
 
 .pinned {
   color: inherit;
+}
+
+.cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
 }
 
 .category,
@@ -70,40 +79,25 @@
 }
 
 .content {
-  min-height: 75px;
-  margin: 6px 15px 10px;
+  margin: 6px 25px 10px;
   border: none;
   outline: none;
   resize: none;
-  overflow: auto;
   white-space: pre-line;
+  overflow: hidden;
   font-family: inherit;
   font-size: 18px;
   color: inherit;
   background-color: inherit;
-  cursor: auto;
+  transition: height 0.25s, max-height 1.5s;
+}
 
-  @media ($not-mobile) {
-    overflow: hidden;
+.listContent {
+  max-height: 190px;
+}
 
-    &:hover {
-      overflow: auto;
-    }
-
-    &::-webkit-scrollbar {
-      width: 7.5px;
-      height: 7.5px;
-    }
-
-    &::-webkit-scrollbar-thumb {
-      border-radius: 4px;
-      background-color: var(--secondary-color);
-    }
-
-    &::-webkit-scrollbar-corner {
-      display: none;
-    }
-  }
+.listContentExpanded {
+  max-height: 1999px;
 }
 
 .checkIcon {
