--- a/src/components/Note/Note.scss
+++ b/src/components/Note/Note.scss
@@ -74,6 +74,7 @@
 .title {
   margin: 8px 24px 0;
   padding: 0;
+  resize: none;
   font-size: 20px;
   font-weight: bold;
 }
@@ -89,7 +90,7 @@
   font-size: 18px;
   color: inherit;
   background-color: inherit;
-  transition: height 0.25s, max-height 1.5s;
+  transition: height 0.2s, max-height 1.5s;
 }
 
 .listContent {
