--- a/src/components/Note/Note.scss
+++ b/src/components/Note/Note.scss
@@ -16,6 +16,11 @@
   }
 }
 
+.hidden {
+  min-height: 100px;
+  opacity: 0;
+}
+
 .disabled {
   opacity: 0.5;
   pointer-events: none;
@@ -106,8 +111,4 @@
       opacity: 0.75;
     }
   }
-}
-
-.hidden {
-  visibility: hidden;
 }
