--- a/src/components/Auth/Auth.scss
+++ b/src/components/Auth/Auth.scss
@@ -15,7 +15,7 @@
     }
   }
 
-  @media ($viewport-4) {
+  @media ($viewport-7) {
     width: 420px;
     margin: 25vh auto 0;
     border: 1px solid var(--secondary-color);
@@ -27,6 +27,10 @@
   margin-top: 60px;
   font-weight: normal;
   color: var(--text-color);
+
+  @media ($viewport-7) {
+    margin-top: 20px;
+  }
 }
 
 .googleSignIn {
@@ -83,6 +87,7 @@
 .resetPassword {
   align-self: end;
   color: #0095f6;
+  cursor: pointer;
 }
 
 .submit {
