--- a/src/components/Auth/Auth.scss
+++ b/src/components/Auth/Auth.scss
@@ -65,12 +65,17 @@
   flex-direction: column;
   width: 100%;
   margin-top: 20px;
-  border-radius: 4px;
 }
 
 .input {
   margin: 2.5px 0;
   padding: 5px;
+  border: 1px solid var(--text-color);
+  border-radius: 4px;
+
+  &:focus {
+    outline: 1px solid dodgerblue;
+  }
 }
 
 .error {
